# spanlite

./: Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  justfile
.github/: dependabot.yml
.github/workflows/: check.yml
src/: auth.rs  client.rs  de.rs  error.rs  lib.rs  params.rs  proto.rs  result.rs  session.rs
tests/: spanner_emulator.rs
