[package]
name = "spanlite"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
tonic = { version = "0.14", features = ["tls-webpki-roots", "tls-ring", "channel"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
http = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
tracing = "0.1"
async-stream = "0.3"
futures-core = "0.3"

[dev-dependencies]
serde_bytes = "0.11"
futures-util = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde_json = "1"
testcontainers = "0.27"

[build-dependencies]
tonic-prost-build = "0.14"
